--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<div id="app">
 			<div id="gl"></div>
+			<div id="gui"></div>
 		</div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
